--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Saptaparnee</a>.
     </div>
     <script src="script.js"></script>
   </body>
