--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
       </div>
     </section>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Saptaparnee</a>.
-    </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
